...
    <string name="host_prompt_reset">Reset to default</string>
    <string name="host_prompt_failed">Unable to save this prompt.</string>
    <string name="app_name">Pyrycode</string>
    <string name="cd_open_menu">Open menu</string>
    <string name="cd_pair_another_host">Pair another host</string>
    <string name="channel_list_empty">To pair a host, tap Pair another host at the top right.</string>
    <string name="cd_back">Back</string>
    <string name="cd_more_actions">More actions</string>
    <string name="save_as_channel_action">Save as channel…</string>
    <string name="cd_conversation_row">%1$s, %2$s</string>
    <string name="cd_conversation_row_idle">%1$s, idle, %2$s</string>
    <string name="cd_discussion_preview_row">%1$s, %2$s</string>
    <string name="cd_tree_row_expand">Expand %1$s</string>
    <string name="cd_tree_row_collapse">Collapse %1$s</string>
...
    <string name="thread_history_dead_end_label">Earlier messages are unavailable</string>
    <string name="cd_thread_history_dead_end">Earlier messages in this conversation are unavailable</string>
    <string name="thread_history_offline_label">Older messages require a connection.</string>
    <string name="thread_interrupt_label">Stop</string>
    <string name="cd_thread_interrupt">Stop the running turn</string>
    <string name="cd_thread_reply_message">Reply to this message</string>
    <string name="cd_thread_copy_message">Copy this message</string>
    <string name="cd_thread_message_sent">Sent %1$s</string>
    <string name="thread_message_show_details">Show time</string>
    <string name="thread_message_hide_details">Hide time</string>
    <string name="cd_thread_copy_code">Copy this code block</string>
    <string name="thread_queued_state_desc">Waiting to send</string>
    <string name="cd_thread_queued_drop">Drop this queued message</string>
...
    <string name="tool_row_collapse">Hide tool details</string>
    <string name="thread_overflow_new_session">Reset session</string>
    <string name="thread_overflow_rename">Rename</string>
    <string name="thread_overflow_edit">Edit</string>
    <string name="thread_overflow_change_workspace">Change workspace…</string>
    <string name="thread_overflow_archive">Archive</string>
    <string name="thread_overflow_channel_info">Channel info</string>
    <string name="thread_overflow_install_memory_plugin">Install memory plugin</string>
    <string name="rename_dialog_title">Rename</string>
    <string name="rename_dialog_field_label">Name</string>
    <string name="rename_dialog_save">Save</string>
    <string name="rename_dialog_cancel">Cancel</string>
    <string name="save_as_channel_dialog_title">Save as channel</string>
...
